--- a/src/main/resources/templates/dashboardPages/Userfooter.html
+++ b/src/main/resources/templates/dashboardPages/Userfooter.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <body>
-<span th:fragment="footer"></span>
+<span th:fragment="footer">
 <footer class="footer" style="background: -webkit-gradient(linear, left top, right top, from(#0c2646), color-stop(60%, #204065), to(#2a5788));">
     <div class=" container-fluid ">
     </div>
@@ -16,5 +16,6 @@
 <script th:src="@{/js/dashboard/perfect-scrollbar.jquery.min.js}"></script>
 <script th:src="@{/js/dashboard/chartjs.min.js}"></script>
 <script th:src="@{/js/dashboard/bootstrap-notify.js}"></script>
+</span>
 </body>
 </html>
