--- a/src/main/resources/templates/dashboardPages/Userheader.html
+++ b/src/main/resources/templates/dashboardPages/Userheader.html
@@ -14,8 +14,8 @@
         <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/now-ui-dashboard.css}" />
 </head>
 <body>
-<div class="wrapper ">
-    <div class="sidebar" data-color="orange" th:fragment="header">
+<div class="wrapper" th:fragment="header">
+    <div class="sidebar" data-color="orange">
         <!--
           Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
       -->
@@ -89,6 +89,7 @@
                             <span class="navbar-toggler-bar bar3"></span>
                         </button>
                     </div>
+                    <a class="navbar-brand" href="#pablo">Dashboard</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -105,8 +106,8 @@
                                 </p>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Login</a>
-                                <a class="dropdown-item" href="#">Register</a>
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="#">Log Out</a>
                             </div>
                         </li>
                     </ul>
