--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -9,13 +9,15 @@
       <!-- End Navbar -->
       <div class="panel-header">
         <h1 th:text="'Welcome to Car Workshop Manager'" style="text-align: center; color: white"></h1>
+          <br>
+          <h2 th:text="'Hi John !'" style="text-align: center; color: white"></h2>
       </div>
       <div class="content" style="background: -webkit-gradient(linear, left top, right top, from(#0c2646), color-stop(60%, #204065), to(#2a5788));">
           <div class="row">
               <div class="col-md-12">
                   <div class="card">
                       <div class="card-header">
-                          <h4 class="card-title"> Simple Table</h4>
+                          <h4 class="card-title">Last Visits</h4>
                       </div>
                       <div class="card-body">
                           <div class="table-responsive">
