--- a/src/main/resources/templates/loginPage/login.html
+++ b/src/main/resources/templates/loginPage/login.html
@@ -37,9 +37,7 @@
           <div class="card card-login card-plain">
             <form class="form" method="" action="">
               <div class="card-header text-center">
-                <div class="logo-container">
-                  <img src="../assets/img/now-logo.png" alt="">
-                </div>
+                <h1 style="color: white">Login</h1>
               </div>
               <div class="card-body">
                 <div class="input-group no-border input-lg">
