--- a/src/main/resources/templates/dashboardPages/admin/userEdit.html
+++ b/src/main/resources/templates/dashboardPages/admin/userEdit.html
@@ -141,53 +141,29 @@
                   </div>
                 </div>
                 <div class="row" style="justify-content: space-between">
-                  <div class="col-md-2-5 pr-1">
+                  <div class="col-md-25 pr-1" style="padding-left: 15px">
                     <div class="form-group" style="text-align: center">
                       <label>Phone Number</label>
                       <input type="text" class="form-control" disabled="" th:value="${user.getPhoneNumber()}" name="phoneNumber" id="phoneNumber" style="text-align: center">
                     </div>
                   </div>
-                  <div class="col-md-2-5 px-1">
+                  <div class="col-md-25 px-1">
                     <div class="form-group" style="text-align: center">
                       <label>Email</label>
                       <input type="text" class="form-control" disabled="" th:value="${user.getEmail()}" name="email" id="email" style="text-align: center">
                     </div>
                   </div>
-                  <div class="col-md-2-5 px-1">
+                  <div class="col-md-25 px-1">
                     <div class="form-group" style="text-align: center">
                       <label>Role</label>
-                        <div class="dropdown bootstrap-select">
-                          <select class="selectpicker" data-size="7" data-style="btn btn-primary btn-round btn-block" title="Single Select" tabindex="-98">
-                          <option class="bs-title-option" value=""></option>
-                          <option disabled="" selected="">Single Option</option>
-                          <option value="2">Foobar</option>
-                          <option value="3">Is great</option>
+                      <div class="dropdown bootstrap-select show-tick">
+                        <select name="car" id="car" class="selectpicker" data-style="btn btn-white btn-round btn-block" title="Choose Car" >
+                          <option>Option 1</option>
                         </select>
-                          <div class="dropdown-menu" role="combobox" style="overflow: hidden;">
-                            <div class="inner show" role="listbox" aria-expanded="false" tabindex="-1" style="overflow-y: auto;">
-                              <ul class="dropdown-menu inner show">
-                                <li class="disabled selected active">
-                                  <a role="option" class="dropdown-item disabled selected active" aria-disabled="true" tabindex="-1" aria-selected="true"><
-                                    <span class="text">Single Option</span>
-                                  </a>
-                                </li>
-                                <li>
-                                  <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
-                                    <span class="text">Foobar</span>
-                                  </a>
-                                </li>
-                                <li>
-                                  <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
-                                    <span class="text">Is great</span>
-                                  </a>
-                                </li>
-                              </ul>
-                            </div>
-                          </div>
-                        </div>
+                      </div>
                     </div>
                   </div>
-                    <div class="col-md-2-5 pl-1">
+                    <div class="col-md-25 pl-1" style="padding-right: 15px">
                       <div class="form-group" style="text-align: center">
                         <label>Enabled</label>
                         <input type="text" class="form-control" th:value="${user.getEnabled()}" name="newEnabled" id="newEnabled" style="text-align: center">
