--- a/src/main/resources/templates/dashboardPages/admin/userEdit.html
+++ b/src/main/resources/templates/dashboardPages/admin/userEdit.html
@@ -158,7 +158,8 @@
                       <label>Role</label>
                       <div class="dropdown bootstrap-select show-tick">
                         <select name="role" id="role" class="selectpicker" data-style="btn btn-white btn-round btn-block" title="Choose Car" >
-                          <option>Option 1</option>
+                          <option th:each="role : ${roleList}" th:value="${role.getId()}" th:text="${role.getName()}" th:selected="${role.getName() == user.role.getName()}">
+                          </option>
                         </select>
                       </div>
                     </div>
@@ -166,7 +167,12 @@
                     <div class="col-md-25 pl-1" style="padding-right: 15px">
                       <div class="form-group" style="text-align: center">
                         <label>Enabled</label>
-                        <input type="text" class="form-control" th:value="${user.getEnabled()}" name="newEnabled" id="newEnabled" style="text-align: center">
+                        <div class="dropdown bootstrap-select show-tick">
+                          <select name="newEnabled" id="newEnabled" class="selectpicker" data-style="btn btn-white btn-round btn-block" title="Choose Car" >
+                            <option th:each="enabled : ${enabledList}" th:value="${enabled}" th:text="${enabled}" th:selected="${enabled == user.enabled}">
+                            </option>
+                          </select>
+                        </div>
                       </div>
                     </div>
                 </div>
